// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/RadioGroup Controlled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <fieldset
      class="Fieldset-sc-4eydyi-0 eWKTpP RadioGroup-pgv2w1-0 hFKzrk"
    >
      <legend
        style="margin-bottom:8px"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Setting Selection
        </span>
      </legend>
      <div
        class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-checked="true"
            aria-invalid="false"
            aria-required="false"
            checked=""
            class="Radio__RadioInput-rhd32j-1 kXplpX Radio-rhd32j-2 eaLglY"
            name="settingSelection"
            type="radio"
            value="a"
          />
          <div
            class="Radio__VisualRadio-rhd32j-0 jtAgjT"
          />
          <span
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
             Option A 
          </span>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-checked="false"
            aria-invalid="false"
            aria-required="false"
            class="Radio__RadioInput-rhd32j-1 kXplpX Radio-rhd32j-2 eaLglY"
            name="settingSelection"
            type="radio"
            value="b"
          />
          <div
            class="Radio__VisualRadio-rhd32j-0 jtAgjT"
          />
          <span
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
             Option B 
          </span>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-checked="false"
            aria-invalid="false"
            aria-required="false"
            class="Radio__RadioInput-rhd32j-1 kXplpX Radio-rhd32j-2 eaLglY"
            name="settingSelection"
            type="radio"
            value="c"
          />
          <div
            class="Radio__VisualRadio-rhd32j-0 jtAgjT"
          />
          <span
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
             Option C 
          </span>
        </label>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots Components/RadioGroup RadioGroup 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <fieldset
      class="Fieldset-sc-4eydyi-0 eWKTpP RadioGroup-pgv2w1-0 hFKzrk"
    >
      <legend
        style="margin-bottom:8px"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Setting Selection
        </span>
      </legend>
      <div
        class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="false"
            aria-required="false"
            class="Radio__RadioInput-rhd32j-1 kXplpX Radio-rhd32j-2 eaLglY"
            name="settingSelection"
            type="radio"
            value="a"
          />
          <div
            class="Radio__VisualRadio-rhd32j-0 jtAgjT"
          />
          <span
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
             Option A 
          </span>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="false"
            aria-required="false"
            class="Radio__RadioInput-rhd32j-1 kXplpX Radio-rhd32j-2 eaLglY"
            name="settingSelection"
            type="radio"
            value="b"
          />
          <div
            class="Radio__VisualRadio-rhd32j-0 jtAgjT"
          />
          <span
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
             Option B 
          </span>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="false"
            aria-required="false"
            class="Radio__RadioInput-rhd32j-1 kXplpX Radio-rhd32j-2 eaLglY"
            name="settingSelection"
            type="radio"
            value="c"
          />
          <div
            class="Radio__VisualRadio-rhd32j-0 jtAgjT"
          />
          <span
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
             Option C 
          </span>
        </label>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots Components/RadioGroup RadioGroup with all props 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <fieldset
      class="Fieldset-sc-4eydyi-0 eWKTpP RadioGroup-pgv2w1-0 hFKzrk"
    >
      <legend
        style="margin-bottom:8px"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Setting Selection
        </span>
        <span
          class="Text-sc-15glbbx-0 lfjkof"
          color="darkGrey"
          font-size="12px"
        >
          (Required)
        </span>
      </legend>
      <p
        class="Text-sc-15glbbx-0 HelpText__HelpTextContent-sc-186o6oo-0 clUgZq"
        color="currentColor"
        font-size="medium"
      >
        Select a setting from the menu below:
      </p>
      <div
        class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="false"
            aria-required="true"
            checked=""
            class="Radio__RadioInput-rhd32j-1 kXplpX Radio-rhd32j-2 eaLglY"
            name="settingSelection"
            required=""
            type="radio"
            value="a"
          />
          <div
            class="Radio__VisualRadio-rhd32j-0 jtAgjT"
          />
          <span
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
             Option A 
          </span>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="false"
            aria-required="true"
            class="Radio__RadioInput-rhd32j-1 kXplpX Radio-rhd32j-2 eaLglY"
            name="settingSelection"
            required=""
            type="radio"
            value="b"
          />
          <div
            class="Radio__VisualRadio-rhd32j-0 jtAgjT"
          />
          <span
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
             Option B 
          </span>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="false"
            aria-required="true"
            class="Radio__RadioInput-rhd32j-1 kXplpX Radio-rhd32j-2 eaLglY"
            name="settingSelection"
            required=""
            type="radio"
            value="c"
          />
          <div
            class="Radio__VisualRadio-rhd32j-0 jtAgjT"
          />
          <span
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
             Option C 
          </span>
        </label>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots Components/RadioGroup Set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <fieldset
      class="Fieldset-sc-4eydyi-0 eWKTpP RadioGroup-pgv2w1-0 hFKzrk"
    >
      <legend
        style="margin-bottom:8px"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Setting Selection
        </span>
      </legend>
      <div
        class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cDeIIW"
          disabled=""
        >
          <input
            aria-invalid="false"
            aria-required="false"
            checked=""
            class="Radio__RadioInput-rhd32j-1 ijGHIn Radio-rhd32j-2 eaLglY"
            disabled=""
            name="settingSelection"
            type="radio"
            value="a"
          />
          <div
            class="Radio__VisualRadio-rhd32j-0 cKIgFL"
            disabled=""
          />
          <span
            class="Text-sc-15glbbx-0 kEBDnw"
            color="currentColor"
            disabled=""
            font-size="medium"
          >
             Option A 
          </span>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cDeIIW"
          disabled=""
        >
          <input
            aria-invalid="false"
            aria-required="false"
            class="Radio__RadioInput-rhd32j-1 ijGHIn Radio-rhd32j-2 eaLglY"
            disabled=""
            name="settingSelection"
            type="radio"
            value="b"
          />
          <div
            class="Radio__VisualRadio-rhd32j-0 cKIgFL"
            disabled=""
          />
          <span
            class="Text-sc-15glbbx-0 kEBDnw"
            color="currentColor"
            disabled=""
            font-size="medium"
          >
             Option B 
          </span>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cDeIIW"
          disabled=""
        >
          <input
            aria-invalid="false"
            aria-required="false"
            class="Radio__RadioInput-rhd32j-1 ijGHIn Radio-rhd32j-2 eaLglY"
            disabled=""
            name="settingSelection"
            type="radio"
            value="c"
          />
          <div
            class="Radio__VisualRadio-rhd32j-0 cKIgFL"
            disabled=""
          />
          <span
            class="Text-sc-15glbbx-0 kEBDnw"
            color="currentColor"
            disabled=""
            font-size="medium"
          >
             Option C 
          </span>
        </label>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots Components/RadioGroup with error list 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <fieldset
      class="Fieldset-sc-4eydyi-0 eWKTpP RadioGroup-pgv2w1-0 hFKzrk"
    >
      <legend
        style="margin-bottom:8px"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Setting Selection
        </span>
      </legend>
      <div
        class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="true"
            aria-required="false"
            checked=""
            class="Radio__RadioInput-rhd32j-1 jvCqep Radio-rhd32j-2 eaLglY"
            name="settingSelection"
            type="radio"
            value="a"
          />
          <div
            class="Radio__VisualRadio-rhd32j-0 jtAgjT"
          />
          <span
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
             Option A 
          </span>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="true"
            aria-required="false"
            class="Radio__RadioInput-rhd32j-1 jvCqep Radio-rhd32j-2 eaLglY"
            name="settingSelection"
            type="radio"
            value="b"
          />
          <div
            class="Radio__VisualRadio-rhd32j-0 jtAgjT"
          />
          <span
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
             Option B 
          </span>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="true"
            aria-required="false"
            class="Radio__RadioInput-rhd32j-1 jvCqep Radio-rhd32j-2 eaLglY"
            name="settingSelection"
            type="radio"
            value="c"
          />
          <div
            class="Radio__VisualRadio-rhd32j-0 jtAgjT"
          />
          <span
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
             Option C 
          </span>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 Flex-sc-1whlq91-0 jHmnKr"
        color="red"
      >
        <svg
          aria-hidden="true"
          class="Icon-sc-150w9kl-0 iGbfeP nds-icon--error"
          fill="currentColor"
          focusable="false"
          height="24px"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="InlineValidation__Wrapper-sc-19uke1q-0 dFKyki"
        >
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Please select an option
          </p>
          <ul
            class="List-sc-1ueqoqt-0 gtzCT"
            color="currentColor"
          >
            <li
              class="ListItem-sc-3wr72f-0 fgjjlO"
              color="currentColor"
            >
              Error message 1
            </li>
            <li
              class="ListItem-sc-3wr72f-0 fgjjlO"
              color="currentColor"
            >
              Error message 2
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots Components/RadioGroup with error message 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <fieldset
      class="Fieldset-sc-4eydyi-0 eWKTpP RadioGroup-pgv2w1-0 hFKzrk"
    >
      <legend
        style="margin-bottom:8px"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Setting Selection
        </span>
      </legend>
      <div
        class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="true"
            aria-required="false"
            checked=""
            class="Radio__RadioInput-rhd32j-1 jvCqep Radio-rhd32j-2 eaLglY"
            name="settingSelection"
            type="radio"
            value="a"
          />
          <div
            class="Radio__VisualRadio-rhd32j-0 jtAgjT"
          />
          <span
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
             Option A 
          </span>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="true"
            aria-required="false"
            class="Radio__RadioInput-rhd32j-1 jvCqep Radio-rhd32j-2 eaLglY"
            name="settingSelection"
            type="radio"
            value="b"
          />
          <div
            class="Radio__VisualRadio-rhd32j-0 jtAgjT"
          />
          <span
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
             Option B 
          </span>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="true"
            aria-required="false"
            class="Radio__RadioInput-rhd32j-1 jvCqep Radio-rhd32j-2 eaLglY"
            name="settingSelection"
            type="radio"
            value="c"
          />
          <div
            class="Radio__VisualRadio-rhd32j-0 jtAgjT"
          />
          <span
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
             Option C 
          </span>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 Flex-sc-1whlq91-0 jHmnKr"
        color="red"
      >
        <svg
          aria-hidden="true"
          class="Icon-sc-150w9kl-0 iGbfeP nds-icon--error"
          fill="currentColor"
          focusable="false"
          height="24px"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="InlineValidation__Wrapper-sc-19uke1q-0 dFKyki"
        >
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Please select an option
          </p>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;
